fix scrollbars for embedded dashboards

--- a/frontend/src/exporter/Exporter.scss
+++ b/frontend/src/exporter/Exporter.scss
@@ -15,6 +15,7 @@ html.export-type-image {
 
 html.export-type-embed {
     overflow: hidden;
+    overflow-y: auto;
     .Exporter {
         padding: 0;
         height: 100vh;
@@ -23,8 +24,8 @@ html.export-type-embed {
             height: 100vh;
             max-height: 100vh;
             .ExportedInsight-content {
-                height: 100vh;
-                max-height: 100vh;
+                height: 100%;
+                max-height: 100%;
                 overflow: hidden;
                 display: flex;
                 flex-direction: column;
